tests/cases/compiler/contextualTyping2.ts
var foo: {id:number;} = {id:4, name:"foo"};
//~^ ERROR: Type 'Object' is not assignable to type 'Object'